<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/bottom_sheet_wrong"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvInCorrect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/incorrect"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvTheQuestionWrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="30dp"
        android:text="@string/the_right_answer"
        android:textColor="@color/white"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/tvCorrectAnswerWrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/answer"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btContinueMcqWrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:background="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/continu"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />
</LinearLayout>