<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.TrueOrFalseActivity">

    <TextView
        android:id="@+id/tvStatementQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/sort_them_based_on_true_and_false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStatement"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatementQuestion"
        app:layout_constraintBottom_toTopOf="@id/cardTruthBox"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/cardTruthBox"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:background="@color/green"
        android:text="@string/True"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintRight_toLeftOf="@+id/cardFalseBox">
    </TextView>

    <TextView
        android:id="@+id/cardFalseBox"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/False"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/cardTruthBox"
        app:layout_constraintRight_toRightOf="parent">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>